# domabot

./: .gitignore  .gitmodules  README.md  doxygen.config
firmware/: README.md  index.md
firmware/include/: firmware_data_types.h
firmware/include/domabot_firmware/: firmware_data_types.h
firmware/platuml/: command_execution.en.puml  command_execution.ru.puml
firmware/src/: firmware.ino  main.ino  src.ino
software/: README.md
software/domabot_cli/: CMakeLists.txt  package.xml
software/domabot_cli/include/domabot_cli/: CLI.h  StringTools.h  UserInteraction.h
software/domabot_cli/launch/: debug.sh  launch.sh
software/domabot_cli/src/: CLI.cpp  UserInteraction.cpp  domabot_cli.cpp
software/domabot_common_lib/: CMakeLists.txt  cppcheck_suppress_list.txt  package.xml
software/domabot_common_lib/include/domabot_common_lib/: Exception.h  RosService.h
software/domabot_common_lib/src/: Exception.cpp
software/domabot_controller/: CMakeLists.txt  package.xml
software/domabot_controller/config/: default.yaml
software/domabot_controller/include/domabot_controller/: Controller.h  ControllerParams.h  Exception.h  Modbus.h  RosParam.h  RosService.h
software/domabot_controller/launch/: debug.sh  debug.xml  launch.xml
software/domabot_controller/src/: Controller.cpp  ControllerParams.cpp  Exception.cpp  Modbus.cpp  domabot_controller.cpp
software/domabot_controller_interfaces/: CMakeLists.txt  package.xml
software/domabot_controller_interfaces/msg/: ControllerStatus.msg  Direction.msg  Status.msg  StepperSettings.msg  StepperTarget.msg
software/domabot_controller_interfaces/srv/: EnableMotors.srv  GetData.srv  SaveSettings.srv  SetDirection.srv  SetMode.srv  SetSettings.srv
software/domabot_core/: CMakeLists.txt  package.xml
software/domabot_core/config/: default_cam.yaml  default_depth_cam.yaml  default_image_cam.yaml
software/domabot_core/include/domabot_core/: Core.h
software/domabot_core/launch/: cam.launch  depth_cam.xml  image_cam.xml  image_viewer.sh  realsense_viewer.sh
software/domabot_core/src/: Core.cpp  domabot_core.cpp
software/domabot_interfaces/: CMakeLists.txt  package.xml
software/domabot_interfaces/msg/: Command.msg  ControllerSettings.msg  ControllerStatus.msg  Direction.msg  Mode.msg  ResponseData.msg  StepperSettings.msg  StepperStatus.msg
software/domabot_interfaces/srv/: Brake.srv  ChangeSettings.srv  Move.srv  SetDirection.srv  SetMode.srv  Stop.srv
