<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>domabot_cli</name>
  <version>0.0.1</version>
  <description>The command line interface for Domabot controller node</description>
  <maintainer email="i@tulkin.name">m79lol</maintainer>
  <license>GPL-3.0 license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>domabot_controller_interfaces</depend>
  <depend>domabot_common_lib</depend>
  <depend>domabot_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
